[package]
name = "jekyll2zola"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.1"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"]}
